syntax = "proto3";

package todo; 

service TaskService{ 
    rpc add(Task) returns (TaskChangeResponse);
    rpc delete(Name) returns (TaskChangeResponse);
    rpc update(TaskUpdateRequest) returns (TaskUpdateResponse);
    rpc get(Name) returns (Task);
}

message Task { 
    Name name = 2; 
    string desc = 3;
}

message TaskChangeResponse{
    string status = 1; 
}
message TaskUpdateResponse { 
    Task task = 1 ;
    string status = 2; 
}
message TaskUpdateRequest { 
    Name name = 1; 
    string desc = 3; 
}
message Name { 
    string name = 1 ; 
}



